--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,1 +1,22 @@
-<p>order works!</p>
+
+<h2>COMMANDES</h2>
+<table mat-table [dataSource]="dataSource" #orderTable>
+    <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef> type de plat </th>
+        <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+        
+    </ng-container>
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> nom du plat </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        
+    </ng-container>
+    <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> Prix </th>
+        <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+        
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    
+</table>
