--- a/src/app/switch/switch.component.html
+++ b/src/app/switch/switch.component.html
@@ -1,5 +1,5 @@
-<mat-card-header>
+<mat-card-header style="background-color:#3333c5;color: white;">
   <h1>{{this.restaurantName}}</h1>
-  <div class="toolbar-spacer"></div>
-  <mat-slide-toggle (change)="onChange($event)">Switch</mat-slide-toggle>
+  <div style="flex: 1 1 auto;"></div>
+  <mat-slide-toggle (change)="onChange($event)">client/resto</mat-slide-toggle>
 </mat-card-header>
