--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,19 +1,24 @@
 
-<h2>COMMANDES</h2>
+<h2 style="background-color: #000000;color: white;">COMMANDES</h2>
 <table mat-table [dataSource]="dataSource" #orderTable>
     <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef> type de plat </th>
-        <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.order.type}} </td>
         
     </ng-container>
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> nom du plat </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.order.name}} </td>
         
     </ng-container>
     <ng-container matColumnDef="price">
         <th mat-header-cell *matHeaderCellDef> Prix </th>
-        <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.order.price}} </td>
+        
+    </ng-container>
+    <ng-container matColumnDef="quantity">
+        <th mat-header-cell *matHeaderCellDef> Quantité </th>
+        <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
         
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
