--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -4,24 +4,28 @@
     <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef> type de plat </th>
         <td mat-cell *matCellDef="let element"> {{element.order.type}} </td>
-        
+        <td mat-footer-cell *matFooterCellDef> Total</td>
     </ng-container>
     <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> nom du plat </th>
         <td mat-cell *matCellDef="let element"> {{element.order.name}} </td>
-        
-    </ng-container>
-    <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef> Prix </th>
-        <td mat-cell *matCellDef="let element"> {{element.order.price}} </td>
+        <td mat-footer-cell *matFooterCellDef> </td>
         
     </ng-container>
     <ng-container matColumnDef="quantity">
         <th mat-header-cell *matHeaderCellDef> Quantité </th>
         <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
+        <td mat-footer-cell *matFooterCellDef> </td>
         
     </ng-container>
+    <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> Prix </th>
+        <td mat-cell *matCellDef="let element"> {{element.order.price}} </td>
+        <td mat-footer-cell *matFooterCellDef> {{getTotalCost()}} </td>
+    </ng-container>
+    
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
     
 </table>
